--- a/bootstrap/src/main/resources/skin/css/bootstrap-patches.css
+++ b/bootstrap/src/main/resources/skin/css/bootstrap-patches.css
@@ -6,6 +6,10 @@ see http://stackoverflow.com/questions/10957781/google-maps-autocomplete-result-
 /*     margin-bottom: 10px; */
 /* } */
 
+.shop-liked li{
+	list-style-type: none;
+}
+
 .account-info{
 	padding:9px !important;
 }
@@ -797,19 +801,34 @@ margin-bottom:20px;
 	.selleroftheday-article p {
  		max-height: 162px;
     	overflow: hidden;
-}
-
+	}
 
 }
 
 /* Portrait tablet to landscape and desktop */
 @media (min-width: 768px) and (max-width: 979px) {
 		
+		
+	.leftcol-productview {
+    	width: 68.7%;
+	}
+	
+	.rightcol-productview {
+   	 width: 25.9%;
+	}
+	
+	#shopInfoContainer .media a {
+		float:none;
+	}
+		
 	.wrapper-item-newproducts {
 		width: 21.7%;
 		padding:4px;	
 	}
 	
+	.seller-profile-list-prod {
+		padding:4px;
+	}
 	.wrapp-productThumbListContent {
 		width: 21.7%;
 		padding:4px;
@@ -819,17 +838,57 @@ margin-bottom:20px;
     	max-height: 84px;
 	}
 	
-	
 	.seller-profile {
-	    padding: 15px;
+	    padding: 14.5px;
 	    width: 43%;
+	}
+	
+	
+	.seller-profile .media img {
+	    height: 120px;
+	    width: 120px;
 	}
 	
 	.selleroftheday-listprod li {
 	    margin: 0 0 0 10px;
-	    width: 22%;
+	    width: 21.7%;
 	}
 	
+	.navbar .nav > li > a {
+    	padding: 9px 22px;
+	}
+	
+	.navbar .nav > li > form {
+    	padding: 9px 22px;
+	}
+	
+	.navbar .brand {
+		padding:0 20px;
+	}
+	
+	.nav-collapse .nav{
+		margin:0;
+	}
+	
+	.account-info {
+    	padding: 5px 20px !important;
+	}
+	
+	.badgeCart {
+	    margin: -45px 0 0 32px;
+	    position: absolute;
+	}
+	
+	.form-navbar-pub { 
+    	margin:0; 
+	}	 
+	
+}
+/* 	.navbar .brand { */
+/*    	 padding: 0 20px; */
+/* 	} */
+	
+
 /* 	.form-horizontal .control-label{ */
 /* 		width: 100%; */
 /* 		text-align: left; */
@@ -841,7 +900,7 @@ margin-bottom:20px;
 /* 	.wrapper-item-newproducts { */
 /* 	    padding: 6px; */
 /* 	    width: 21.9%; */
-	}
+/* 	} */
 
 /* 	.selleroftheday-listprod li{ */
 /* 		float: left; */
@@ -849,7 +908,7 @@ margin-bottom:20px;
 /* 		width: 43.2%; */
 /* 		list-style-type: none; */
 		
-	}
+/* 	} */
 /* 	.selleroftheday-article { */
 /* 	    height: 152px; */
 /* 	    overflow: hidden; */
@@ -867,76 +926,75 @@ margin-bottom:20px;
 /* 		padding:6px; */
 /* 	} */
 		
-}
+/* } */
 
-/* landscape phone (galaxy nexus landscape, viewsonic pad landscape, asus galaxy 7--windows to tablet portrait */
 
-@media (max-width:800px) { 
 
-	.badgeCart {
-	    margin: -45px 0 0 32px;
-	    position: absolute;
-	}
-	.form-navbar-pub {
-    	margin:0;
-	}	
-	.navbar .nav > li > a {
-    	padding: 9px 22px;
-	}
-	
-	.navbar .nav > li > form {
-    	padding: 9px 22px;
-	}
-	
-	.account-info {
-    	padding: 5px 20px !important;
-	}
-	
-/* 	.selleroftheday-article { */
-/*     height: 130px; */
-/*     overflow: hidden; */
+/* tablet mini */
+
+/* @media (max-width:800px) {  */
+
+/* 	.badgeCart { */
+/* 	    margin: -45px 0 0 32px; */
+/* 	    position: absolute; */
 /* 	} */
-/* 	.selleroftheday-listprod li { */
-/*     float: left; */
-/*     list-style-type: none; */
-/*     margin: 0 0 0 10px; */
-/*     width: 39%; */
-/* 	} */
-/* 	.seller-profile-list-prod { */
-/*     background-color: #F7F7F3; */
-/*     border: 1px solid #ECECEC; */
-/*     padding: 5px; */
+/* 	.navbar .nav > li > a { */
+/*     	padding: 9px 22px; */
 /* 	} */
 	
-	.selleroftheday-listprod {
-    	width: 49.4%;
-	}
-/* 	.selleroftheday-listprod li { */
-/* 	    float: left; */
-/* 	    list-style-type: none; */
-/* 	    margin: 0 0 0 8px; */
-/* 	    width: 42.7%; */
+/* 	.navbar .nav > li > form { */
+/*     	padding: 9px 22px; */
 /* 	} */
 	
-/* 	.wrapper-item-newproducts { */
+/* 	.account-info { */
+/*     	padding: 5px 20px !important; */
+/* 	} */
+	
+/* /* 	.selleroftheday-article { */ */
+/* /*     height: 130px; */ */
+/* /*     overflow: hidden; */ */
+/* /* 	} */ */
+/* /* 	.selleroftheday-listprod li { */ */
+/* /*     float: left; */ */
+/* /*     list-style-type: none; */ */
+/* /*     margin: 0 0 0 10px; */ */
+/* /*     width: 39%; */ */
+/* /* 	} */ */
+/* /* 	.seller-profile-list-prod { */ */
+/* /*     background-color: #F7F7F3; */ */
+/* /*     border: 1px solid #ECECEC; */ */
+/* /*     padding: 5px; */ */
+/* /* 	} */ */
+	
+/* 	.selleroftheday-listprod { */
+/*     	width: 49.4%; */
+/* 	} */
+/* /* 	.selleroftheday-listprod li { */ */
+/* /* 	    float: left; */ */
+/* /* 	    list-style-type: none; */ */
+/* /* 	    margin: 0 0 0 8px; */ */
+/* /* 	    width: 42.7%; */ */
+/* /* 	} */ */
+	
+/* /* 	.wrapper-item-newproducts { */ */
+/* /* 		padding: 5px; */ */
+/* /* 		margin: 0 8px 13px 0; */ */
+/* /* 		width: 21.6%; */ */
+/* /* 		} */ */
+		
+/* 	.wrapp-productThumbListContent { */
 /* 		padding: 5px; */
 /* 		margin: 0 8px 13px 0; */
 /* 		width: 21.6%; */
-/* 		} */
-		
-	.wrapp-productThumbListContent {
-		padding: 5px;
-		margin: 0 8px 13px 0;
-		width: 21.6%;
-	}
+/* 	} */
 	
-	.navbar .brand {
-   	 padding: 0 20px;
-	}
+/* 	.navbar .brand { */
+/*    	 padding: 0 20px; */
+/* 	} */
 	
-	#shopInfoContainer .media a{
-		float:none;
-	}
+/* 	#shopInfoContainer .media a{ */
+/* 		float:none; */
+/* 	} */
 	
 	
 /* 	.navbar-inner{ */
@@ -944,7 +1002,7 @@ margin-bottom:20px;
 /*     	padding-right: 20px; */
 /* 	} */
 	
-}
+/* } */
 
 
 /* landscape phone (galaxy nexus and higher potrait to tablet portrait */
@@ -962,9 +1020,8 @@ margin-bottom:20px;
 /* } */
 
 
-/* Landscape phone to portrait tablet */
-
-@media (max-width: 767px) {
+/* mini tablet belum terdeteksi wawe di browser*/
+@media (max-width: 768px)  {
 	
 	.more-view-product ul{
 		 margin: 0;
@@ -974,27 +1031,12 @@ margin-bottom:20px;
 		margin-right:5px;
 	}
 	
-/* 	.selleroftheday-box{ */
-/* 		width: 400px; */
-/* 	} */
-/* 	.selleroftheday-listprod{ */
-/* 		margin-left: 6px; */
-/* 	    width: 428px; */
-/* 	} */
-
-	
-	.selleroftheday-img{
-/* 		width: 180px; */
-/* 		height: 180px; */
+	.wrapper-item-newproducts {
+		padding: 4px;
+		margin: 0 10px 15px 0;
+		width: 22.2%;	
 	}
-/* 	.selleroftheday-img-box{ */
-/* 		width: 188px;	 */
-/* 		float:left; */
-/* 	} */
-/* 	.selleroftheday-article{ */
-/* 		min-height: 110px; */
-/* 		overflow: hidden; */
-/* 	} */
+	
 	.selleroftheday-listprod ul{
 		margin:0;
 	}
@@ -1008,28 +1050,70 @@ margin-bottom:20px;
 	.leftcol-productview {
 	    width: 65%;
 	}
-
 	    
-.navbar-fixed-top .navbar-inner, .navbar-fixed-bottom .navbar-inner {
-    padding: 5px 20px;
+	.navbar-fixed-top .navbar-inner, .navbar-fixed-bottom .navbar-inner {
+	    padding: 5px 20px;
+	}
+
+	.navbar .nav > li > a {
+    	padding: 9px 22px;
+	}
+	
+	.navbar .nav > li > form {
+    	padding: 9px 22px;
+	}
+	
+	.navbar .brand {
+   		padding: 0 20px;
+	}
+		
+			/* 	.navbar .brand { */
+			/* 		padding: 0 36px; */
+			/* 	} */
+				
+				/* 	.selleroftheday-box{ */
+			/* 		width: 400px; */
+			/* 	} */
+			/* 	.selleroftheday-listprod{ */
+			/* 		margin-left: 6px; */
+			/* 	    width: 428px; */
+			/* 	} */
+			
+				
+			/* 	.selleroftheday-img{ */
+			/* 		width: 180px; */
+			/* 		height: 180px; */
+			/* 	} */
+			/* 	.selleroftheday-img-box{ */
+			/* 		width: 188px;	 */
+			/* 		float:left; */
+			/* 	} */
+			/* 	.selleroftheday-article{ */
+			/* 		min-height: 110px; */
+			/* 		overflow: hidden; */
+			/* 	} */
+			
+			/* } */
 }
+
 
 /* Mobile styling (portrait) -----------*/
 
-@media (max-width: 320px){
-			select{
-			width: 190px;
-		}
-		.thumb-prod-stories {
-   			float:none;
-   			margin-bottom:5px;
-		}
-		.smartphone{
-			width: 85px;
-			margin-right: 15px;
-		}
+/* @media (max-width: 320px){ */
+/* 			select{ */
+/* 			width: 190px; */
+/* 		} */
+/* 		.thumb-prod-stories { */
+/*    			float:none; */
+/*    			margin-bottom:5px; */
+/* 		} */
+/* 		.smartphone{ */
+/* 			width: 85px; */
+/* 			margin-right: 15px; */
+/* 		} */
 
-}
+/* } */
+
 
 /* Mobile styling ( LG optimus, iphone 3,4 bb8300, portrait and landscape) -----------*/
 
@@ -1040,9 +1124,46 @@ margin-bottom:20px;
 	input{
 	width: 100%;
 	}
-/* 	.footer{ */
-/* 		text-align: center; */
-/* 	} */
+	
+	.leftcol-productview {
+    	width: 100%;
+	}
+	
+	.rightcol-productview {
+   	 width: 100%;
+	}
+	
+	.form-navbar-pub { 
+    	margin:0; 
+	}	 
+	
+	.account-info {
+    	padding: 5px 20px !important;
+	}
+	
+	.badgeCart {
+	    margin: -45px 0 0 32px;
+	    position: absolute;
+	}
+	
+	
+	.navbar-fixed-top .navbar-inner, .navbar-fixed-bottom .navbar-inner {
+	    padding: 5px 20px;
+	}
+	
+	.navbar .brand {
+   		padding: 0 20px;
+	}
+	
+	.navbar .nav > li > a {
+	    	padding: 9px 22px;
+	}
+	
+	
+	.navbar .nav > li > form {
+    	padding: 9px 22px;
+	}
+	
 	.form-horizontal .controls {
  	 margin-left: 0;
 	}
@@ -1051,6 +1172,23 @@ margin-bottom:20px;
 		 display: block;
 	    margin-left: auto;
 	    margin-right: auto;
+	}
+	
+	.seller-profile {
+    	width: 100%;
+	}
+	
+	.seller-profile .media a{
+		float:none;
+		margin-right:0;
+	}
+	
+	.seller-profile .media img{
+		display: block;
+    	margin-left: auto;
+   		margin-right: auto;
+   		height: auto;
+    	width: auto;
 	}
 	
 	.selleroftheday-article {
@@ -1065,12 +1203,11 @@ margin-bottom:20px;
 	}
 
 	.selleroftheday-listprod li{
-		margin: 0 10px 15px 0;
+		margin: 10px 0;
 		width: 100%;
 		list-style-type: none;
 	
 	}
-	
 	
 	.wrapper-item-newproducts {
 	    margin: 0 8px 13px 0;
@@ -1087,23 +1224,29 @@ margin-bottom:20px;
 	.tophead {
     	margin: 14px 0;
 	}
+	
 	.carousel {
     	margin:-7px 0 14px 0;
 	}
+	
 	.navbar {
     	margin-bottom: 14px;
 	}
+	
 	.navbar .btn, .navbar .btn-group {
     	margin: 5px;
 	}
+	
 	.pricehomepage {
 	    color: #78C042;
 	    text-align: right;
 	    width: 94px;
 	}
+	
 	.wrapp-productThumbListContent {
 		list-style-type: none;	
 	}
+	
 	.like-product-box ul, li {
     	list-style-type: none;
 	}
@@ -1258,11 +1401,7 @@ margin-bottom:20px;
 			float: left;
 			margin: 0 5px 5px 0;
 		}
-		.prof-pic{
-			width: 87px;
-			float:left;
-			margin-right: 20px;
-		}
+
 		.img-list-group li {
 		    border: 1px solid #EEEEEE;
 		    margin-right: 10px;
@@ -1289,11 +1428,11 @@ margin-bottom:20px;
     		margin: 0;
 		}
 		
-/* 		.seller-profile-list-prod { */
-/* 		display: block; */
-/*     	margin-left: auto; */
-/*     	margin-right: auto; */
-/* 		} */
+		.seller-profile-list-prod {
+			display: block;
+	    	margin-left: auto;
+	    	margin-right: auto;
+		}
 		.selleroftheday-listprod{
 			margin-bottom: 5px;
 		}
