--- a/bootstrap/src/main/resources/skin/css/bootstrap-patches.css
+++ b/bootstrap/src/main/resources/skin/css/bootstrap-patches.css
@@ -80,8 +80,8 @@ see http://stackoverflow.com/questions/10957781/google-maps-autocomplete-result-
 .bg-content{
 	background: url("../img/background-content.png") repeat;
 	border: 1px solid #D3D3D3;
-    border-top-left-radius: 7px;
-    border-top-right-radius: 7px;
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
     margin-bottom: 10px !important;
     padding: 20px;
 }
@@ -678,6 +678,7 @@ a:hover {
 }
 #shopLikersContainer li{
   	float: left;
+  	list-style-type:none;
     margin: 0 5px 5px 0;
 }
 .selleroftheday-listprod{
