Refs#855 repeat thead failed

--- a/bootstrap/src/main/resources/org/soluvas/web/bootstrap/bootstrap-print.css
+++ b/bootstrap/src/main/resources/org/soluvas/web/bootstrap/bootstrap-print.css
@@ -1,7 +1,24 @@
+table { 
+	page-break-inside:auto; 
+}
+tr { 
+	page-break-inside:avoid; 
+	page-break-after:auto;
+}
+td { 
+	page-break-inside:avoid; 
+	page-break-after:auto 
+}
+thead { 
+	display:table-header-group;
+}
+thead th, thead td {
+	position: static; 
+}
+
 .sidebar-categories{
 	display: none;
 }
-
 
 @page {
 	margin: 0.5cm;
