IN PROGRESS - issue BC-1196: Print To PDF Available Stock belum Aktif https://idbippo.atlassian.net/browse/BC-1196
add anchor style when print to pdf on Available Stock page

--- a/bootstrap/src/main/resources/org/soluvas/web/bootstrap/bootstrap-print.css
+++ b/bootstrap/src/main/resources/org/soluvas/web/bootstrap/bootstrap-print.css
@@ -59,6 +59,10 @@ button.btn {
 	display: none;
 }
 
+a.btn {
+	display: none;
+}
+
 .span9 {
 	width: 100%;
 	padding: 0px;
@@ -92,3 +96,4 @@ button.btn {
 .BackendNavbar {
 	display: none;
 }
+
