--- a/bootstrap/src/main/resources/org/soluvas/web/bootstrap/backend/css/style.css
+++ b/bootstrap/src/main/resources/org/soluvas/web/bootstrap/backend/css/style.css
@@ -8,7 +8,7 @@ html {
     text-rendering: optimizeLegibility !important;
     -webkit-font-smoothing: antialiased !important;
 }
-body {
+body, .body-bucket-admin{
     color:#767676;
     background:#f1f2f7;
     font-family:'Open Sans',sans-serif;
@@ -5286,4 +5286,8 @@ div.tagsinput span.tag {
 .evnt-input::-webkit-input-placeholder {
     color:#fff !important;
     font-size: 12px;
+}
+
+.input-group span.yui-skin-sam{
+	display: none;
 }
