fix page sales order detail

--- a/bootstrap/src/main/resources/org/soluvas/web/bootstrap/backend/css/style-responsive.css
+++ b/bootstrap/src/main/resources/org/soluvas/web/bootstrap/backend/css/style-responsive.css
@@ -1,3 +1,9 @@
+@media(min-width: 767px){
+	.mini-panel-body{
+	height: 200px;
+	}
+}
+
 @media (min-width: 480px) and (max-width: 767px) {
 body{
     margin-top: 80px ! important;
