style for header and panel

--- a/bootstrap/src/main/resources/org/soluvas/web/bootstrap/backend/css/style.css
+++ b/bootstrap/src/main/resources/org/soluvas/web/bootstrap/backend/css/style.css
@@ -5291,3 +5291,7 @@ div.tagsinput span.tag {
 .input-group span.yui-skin-sam{
 	display: none;
 }
+
+.mini-panel-body{
+	background-color: #F1F2F7;
+}
