--- a/bootstrap/src/main/resources/org/soluvas/web/bootstrap/backend/css/style-responsive.css
+++ b/bootstrap/src/main/resources/org/soluvas/web/bootstrap/backend/css/style-responsive.css
@@ -4,6 +4,14 @@
 	}
 }
 
+@media(max-width: 767px){
+    .notify-row{
+	    position: relative;
+	    z-index: 2000;
+    }
+	
+}
+
 @media (min-width: 480px) and (max-width: 767px) {
 body{
     margin-top: 80px ! important;
@@ -44,7 +52,10 @@ body{
     #main-content{
         margin-left: 0px;
     }
-
+    .top-nav{
+    	margin-top: 90px;
+    	margin-bottom: 10px;
+    }
 }
 
 @media (max-width: 479px) {
@@ -93,5 +104,9 @@ body{
     }
     .position-center{
     	width: 100%;
+    }
+    .top-nav{
+    	margin-top: 40px;
+    	margin-bottom: 10px;
     }
 }
