--- a/bootstrap/src/main/resources/org/soluvas/web/bootstrap/backend/css/style.css
+++ b/bootstrap/src/main/resources/org/soluvas/web/bootstrap/backend/css/style.css
@@ -2,7 +2,7 @@
 /* Import fonts */
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic,800,800italic);
 @import url(http://fonts.googleapis.com/css?family=Lato:400,100,100italic,300,300italic,400italic,700,700italic,900,900italic);
-@import url(bucket-ico-fonts.css);
+/* @import url(bucket-ico-fonts.css); */
 
 html {
     text-rendering: optimizeLegibility !important;
