bucket admin styling

--- a/bootstrap/src/main/resources/org/soluvas/web/bootstrap/backend/css/style.css
+++ b/bootstrap/src/main/resources/org/soluvas/web/bootstrap/backend/css/style.css
@@ -20,6 +20,11 @@ body, .body-bucket-admin{
 ul li {
     list-style:none;
 }
+
+.form-control {
+    color: #767676;
+}
+
 a,a:hover,a:focus {
     text-decoration:none;
     outline:none;
