--- a/bootstrap/src/main/resources/org/soluvas/web/bootstrap/bootstrap3wysihtml5v2/wysiwyg-color.css
+++ b/bootstrap/src/main/resources/org/soluvas/web/bootstrap/bootstrap3wysihtml5v2/wysiwyg-color.css
@@ -65,3 +65,22 @@
 .wysiwyg-color-orange {
   color: orange;
 }
+
+/* .wysiwyg-font-size-12 { */
+/*   font-size: 12px; */
+/* } */
+/* .wysiwyg-font-size-11 { */
+/*   font-size: 11px; */
+/* } */
+/* .wysiwyg-font-size-10 { */
+/*   font-size: 10px; */
+/* } */
+/* .wysiwyg-font-size-9 { */
+/*   font-size: 9px; */
+/* } */
+/* .wysiwyg-font-size-8 { */
+/*   font-size: 8px; */
+/* } */
+/* .wysiwyg-font-size-7 { */
+/*   font-size: 7px; */
+/* } */
